style: added ui design to both charts

--- a/code/WebApp/WebApp/Components/DoughnutChart.razor
+++ b/code/WebApp/WebApp/Components/DoughnutChart.razor
@@ -1,7 +1,7 @@
 ﻿@rendermode InteractiveServer
 
 <!-- In deiner Blazor-Komponente -->
-<div class="chart-container" style="position: relative; height:@Height; width:@Width">
+<div class="chart-container" style="position: relative; height:@Height; width:@Width; padding:20px; box-shadow: 0 7px 25px rgba(0,0,0,0.6); border-radius:25px; margin:10px; background: #2B3036;">
     <canvas id="@Name"></canvas>
 </div>
     
