performance: performance increased by 50ms by running avergaeprice and currentprice in parralel #14

--- a/code/WebApp/WebApp/Components/Pages/Wallet.razor
+++ b/code/WebApp/WebApp/Components/Pages/Wallet.razor
@@ -245,7 +245,7 @@
         stopwatch.Start();
         await HelperClasses.FinanceCalculations.CalculatePortfolioValueForTheLastXDays(dataFetcherService, walletEntries, priceList, dataList, allTransactionsOfUser, lastSelecteddays);
         stopwatch.Stop();
-        Console.WriteLine("Time elapsed: {0}", stopwatch.Elapsed.TotalSeconds);
+        Console.WriteLine("Time elapsed: {0}", stopwatch.Elapsed.TotalMilliseconds);
 
         await priceChart.UpdateChart();
         await doughnutChart.UpdateChart();
