--- a/code/WebApp/WebApp/Components/PriceChart.razor
+++ b/code/WebApp/WebApp/Components/PriceChart.razor
@@ -1,6 +1,7 @@
 ﻿@rendermode InteractiveServer
 
 <div class="chart-container" style="position: relative; height:@Height; width:@Width; padding:20px; box-shadow: 0 7px 25px rgba(0,0,0,0.6); border-radius:25px;margin:10px; background: #2B3036;">
+    <span class="badge text-bg-primary" style="position: absolute; top: 10px; left: 10px;">History</span>
     <div class="button-group" style="position: absolute; top: 10px; right: 10px;">
         <button type="button" class="btn btn-outline-primary" @onclick="() => UpdateTimeRange(7)">7D</button>
         <button type="button" class="btn btn-outline-primary" @onclick="() => UpdateTimeRange(30)">30D</button>
